--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
         <div class="name">LegitLai</div>
         <!-- NO ADDITIONAL TEXT HERE -->
         <div class="buttons">
-            <a class="button" href="https://www.youtube.com/LegitLai" target="_blank">
+            <a class="button" href="https://www.youtube.com/@LegitLai" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube">
             </a>
-            <a class="button" href="https://akatsuki.gg/u/130297" target="_blank">
+            <a class="button" href="https://akatsuki.gg/u/130297?mode=0&rx=1" target="_blank">
                 <img src="osu-logo.png" alt="Osu"> <!-- Use your local Osu logo -->
             </a>
             <a class="button" href="https://steamcommunity.com/id/legitlai" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Steam_icon_logo.svg" alt="Steam">
             </a>
-            <a class="button" href="https://www.tiktok.com/@yourusername" target="_blank">
+            <a class="button" href="https://www.tiktok.com/@legitlai8" target="_blank">
                 <img src="tiktok-logo.png" alt="TikTok"> <!-- Use your local TikTok logo -->
             </a>
             <a class="button" href="https://www.instagram.com/legitlai/" target="_blank">
