--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LegitLai</title>
+    <!-- Add a cool Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         /* General styles */
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Poppins', sans-serif; /* Use the cool font */
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -40,7 +42,7 @@
 
         .name {
             font-size: 2.2em; /* Increased font size */
-            font-weight: bold;
+            font-weight: 600; /* Semi-bold for a modern look */
             margin-top: 15px; /* Space above name */
             color: #f0f0f0;
         }
