--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>LegitLai</title>
     <!-- Add a cool Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Add Favicon -->
+    <link rel="icon" type="image/x-icon" href="https://legitlai.github.io/favicon.ico">
+    <!-- Embed Meta Tags -->
+    <meta property="og:title" content="LegitLai's Profile">
+    <meta property="og:description" content="Just my profile! Check out my social links.">
+    <meta property="og:image" content="https://legitlai.github.io/embed-image.png">
+    <meta property="og:url" content="https://legitlai.github.io">
+    <meta name="twitter:card" content="summary_large_image">
     <style>
         /* General styles */
         body {
