--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Add Favicon -->
     <link rel="icon" type="image/x-icon" href="https://legitlai.github.io/favicon.ico">
     <!-- Embed Meta Tags -->
-    <meta property="og:title" content="LegitLai's Profile">
+    <meta property="og:title" content="LegitLai Profile">
     <meta property="og:description" content="Check out my social links.">
     <meta property="og:image" content="https://legitlai.github.io/embed-image.png">
     <meta property="og:url" content="https://legitlai.github.io">
